Subida de archivos productos y usuarios

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+
+<img src="http://localhost:3000/imagen/usuarios/5c6ca9ee6a38a6241c72fc5e-311.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1YzZjYTlmYzZhMzhhNjI0MWM3MmZjNjEiLCJub21icmUiOiJEaWVnbyIsImVtYWlsIjoidGVzdDRAZ21haWwuY29tIiwiX192IjowfSwiaWF0IjoxNTUxNDAwMzQ4LCJleHAiOjE1NTE1NzMxNDh9.pTUwj2EbuWyTvvkDNwT-xyGylj-BbPXNDYpGJcCc0Sk">
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
     <script>
